welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: not found: value vrai
  if (versLAvant == vrai)
                    ^